# bio-datasets

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup_ccd.py
.github/workflows/: pre-commit.yml  publish.yml  test.yml
examples/: StructureCompression.ipynb  upload_cath_dataset.py  upload_foldcomp_db.py  upload_pdb.py  upload_pinder_dataset.py
examples/notebooks/: Assembly.ipynb  MissingCoordinates.ipynb
examples/share/: upload_cath_dataset.py  upload_pinder_dataset.py
examples/train/: ligand_mpnn.py  ligand_mpnn_splits.json
src/bio_datasets/: __init__.py  info.py
src/bio_datasets/features/: __init__.py  atom_array.py  features.py
src/bio_datasets/protein/: __init__.py  complex.py  constants.py  protein.py
src/bio_datasets/structure/: __init__.py  biomolecule.py  chemical.py  complex.py  io.py  parsing.py  residue.py  utils.py
src/bio_datasets/structure/chemical/: __init__.py  chemical.py
src/bio_datasets/structure/nucleic/: __init__.py  dna.py  nucleic.py  rna.py
src/bio_datasets/structure/pdbx/: convert.py  encoding.pyx
src/bio_datasets/structure/protein/: __init__.py  constants.py  discretize.py  internal_coordinates.py  protein.py
src/bio_datasets_cli/: cif2bcif.py
tests/: conftest.py  test_np_utils.py
tests/features/: test_atom_array.py
tests/proteins/: test_proteins.py
