[build-system]
requires = ["poetry-core>=1.0.0"]  # Use poetry-core for build-system requirements
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bio_datasets"
version = "0.0.1"
description = "Fast, convenient and shareable datasets for BioML"
authors = [
    "Alex Hawkins-Hooker",
]
requires-python = ">=3.7"
packages = [
    { include = "bio_datasets", from = "src" }
]

[tool.poetry.dependencies]
pytest = ">=8.2.0"
foldcomp = ">=0.0.7"
biotite = { git = "https://github.com/biotite-dev/biotite.git" }  # TODO update when compress released (1.0.2)
huggingface-hub = { git = "https://github.com/huggingface/huggingface_hub.git"}  # TODO update when https://github.com/huggingface/huggingface_hub/pull/2626 released
datasets = {git = "https://github.com/alex-hh/datasets.git", rev = "iterable-dataset-fixes-new"}
nerfax = {git = "https://github.com/PeptoneLtd/nerfax.git"}

[tool.poetry.source]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
